--- a/Brandlogs/Admin/mealprogram.html
+++ b/Brandlogs/Admin/mealprogram.html
@@ -98,9 +98,8 @@
             </li>
             <li class="mobile-icon">
               <a
-                data-target="#Statistik"
-                data-toggle="collapse"
-                aria-expanded="false"
+                href="../Admin/landingPage.html"
+                style="text-decoration: none"
               >
                 <div class="d-flex">
                   <i class="fas fa-home" style="margin: 10px; color: #000"></i>
