--- a/Brandlogs/Brands/brand.html
+++ b/Brandlogs/Brands/brand.html
@@ -92,21 +92,22 @@
           </a>
         </div>
         <div class="container-fluid d-flex flex-column justify-content-start align-items-center align-items-md-start flex-md-row mt-4 mb-5">
-          <div class="rounded-3 p-2 px-4 px-md-5 py-md-3 d-flex flex-row align-items-center gap-4 card-container">
-            <div class="pic col-2">
-              <img src="../Assets/images/user.png" width="" class="w-100" alt="" />
+          <a href="../BrandProfile/brandLogStories.html" style="text-decoration: none; color: #000;">
+            <div class="rounded-3 p-2 px-4 px-md-5 py-md-3 d-flex flex-row align-items-center gap-4 card-container">
+              <div class="pic col-2">
+                <img src="../Assets/images/school logo.png" width="" class="w-100" alt="" />
+              </div>
+              <div class="cont">
+                <h2 class="my-3 fs-6">School 1</h2>
+                <ul class="list-unstyled d-flex gap-2">
+                  <li>
+                    <strong class="font-weight-bold">Logged by:</strong> 200
+                  </li>
+                  <li><strong class="font-weight-bold">Connects:</strong> 200</li>
+                </ul>
+              </div>
             </div>
-            <div class="cont">
-              <h2 class="my-3 fs-6">John Doe</h2>
-              <h6><strong>Connection Value:</strong> My Schoolmate</h6>
-              <ul class="list-unstyled d-flex gap-2">
-                <li>
-                  <strong class="font-weight-bold">Logged by:</strong> 200
-                </li>
-                <li><strong class="font-weight-bold">Connects:</strong> 200</li>
-              </ul>
-            </div>
-          </div>
+          </a>
         </div>
         <hr class="log-stories-hr" style="margin-top: -20px;"/>    
         <!-- End of Connect Container -->
@@ -119,21 +120,22 @@
           </a>
         </div>
         <div class="container-fluid d-flex flex-column justify-content-start align-items-center align-items-md-start flex-md-row mt-4 mb-5">
-          <div class="rounded-3 p-2 px-4 px-md-5 py-md-3 d-flex flex-row align-items-center gap-4 card-container">
-            <div class="pic col-2">
-              <img src="../Assets/images/user.png" width="" class="w-100" alt="" />
+          <a href="../BrandProfile/brandLogStories.html" style="text-decoration: none; color: #000;">
+            <div class="rounded-3 p-2 px-4 px-md-5 py-md-3 d-flex flex-row align-items-center gap-4 card-container">
+              <div class="pic col-2">
+                <img src="../Assets/images/school logo.png" width="" class="w-100" alt="" />
+              </div>
+              <div class="cont">
+                <h2 class="my-3 fs-6">School 2</h2>
+                <ul class="list-unstyled d-flex gap-2">
+                  <li>
+                    <strong class="font-weight-bold">Logged by:</strong> 200
+                  </li>
+                  <li><strong class="font-weight-bold">Connects:</strong> 200</li>
+                </ul>
+              </div>
             </div>
-            <div class="cont">
-              <h2 class="my-3 fs-6">John Doe</h2>
-              <h6><strong>Connection Value:</strong> My Schoolmate</h6>
-              <ul class="list-unstyled d-flex gap-2">
-                <li>
-                  <strong class="font-weight-bold">Logged by:</strong> 200
-                </li>
-                <li><strong class="font-weight-bold">Connects:</strong> 200</li>
-              </ul>
-            </div>
-          </div>
+          </a>
         </div>
         <hr class="log-stories-hr" style="margin-top: -20px;"/>    
         <!-- End of Connect Container -->
@@ -146,21 +148,22 @@
           </a>
         </div>
         <div class="container-fluid d-flex flex-column justify-content-start align-items-center align-items-md-start flex-md-row mt-4 mb-5">
-          <div class="rounded-3 p-2 px-4 px-md-5 py-md-3 d-flex flex-row align-items-center gap-4 card-container">
-            <div class="pic col-2">
-              <img src="../Assets/images/user.png" width="" class="w-100" alt="" />
+          <a href="../BrandProfile/brandLogStories.html" style="text-decoration: none; color: #000;">
+            <div class="rounded-3 p-2 px-4 px-md-5 py-md-3 d-flex flex-row align-items-center gap-4 card-container">
+              <div class="pic col-2">
+                <img src="../Assets/images/school logo.png" width="" class="w-100" alt="" />
+              </div>
+              <div class="cont">
+                <h2 class="my-3 fs-6">School 3</h2>
+                <ul class="list-unstyled d-flex gap-2">
+                  <li>
+                    <strong class="font-weight-bold">Logged by:</strong> 200
+                  </li>
+                  <li><strong class="font-weight-bold">Connects:</strong> 200</li>
+                </ul>
+              </div>
             </div>
-            <div class="cont">
-              <h2 class="my-3 fs-6">Doe John</h2>
-              <h6><strong>Connection Value:</strong> My Schoolmate</h6>
-              <ul class="list-unstyled d-flex gap-2">
-                <li>
-                  <strong class="font-weight-bold">Logged by:</strong> 200
-                </li>
-                <li><strong class="font-weight-bold">Connects:</strong> 200</li>
-              </ul>
-            </div>
-          </div>
+          </a>
         </div>
         <hr class="log-stories-hr" style="margin-top: -20px;"/>    
         <!-- End of Connect Container -->
