terms and conditions update

--- a/Brandlogs/LogStories/logstories.html
+++ b/Brandlogs/LogStories/logstories.html
@@ -92,7 +92,7 @@
             >
               <div class="d-flex align-items-center">
                 <img src="../Assets/images/tony.jpg" class="w-25 h-25" alt="" />
-                <h3 class="fw-bold ms-2 fs-6">Username</h3>
+                <h3 class="fw-bold ms-2 fs-6">Tony Robbins</h3>
               </div>
             </a>
             <a href="#" class="connect-btn" data-toggle="modal" data-target="#first-modal">
