--- a/Brandlogs/LandingPage/landingPage.html
+++ b/Brandlogs/LandingPage/landingPage.html
@@ -736,10 +736,10 @@
                     <a href="#FAQs" class="text-decoration-none">FAQs</a>
                 </div>
                 <div>
-                    <a href="/PrivacyPolicy/privacyPolicy.html" class="text-decoration-none">Privacy Policy</a>
+                    <a href="../PrivacyPolicy/privacyPolicy.html" class="text-decoration-none">Privacy Policy</a>
                 </div>
                 <div>
-                    <a href="/TermsAndConditions/termsAndConditions.html" class="text-decoration-none">Terms &amp; Conditions</a>
+                    <a href="../TermsAndConditions/termsAndConditions.html" class="text-decoration-none">Terms &amp; Conditions</a>
                 </div>
                 <br/>
                 <div>
