--- a/Brandlogs/Admin/beneficiaries.html
+++ b/Brandlogs/Admin/beneficiaries.html
@@ -125,7 +125,7 @@
               <tr>
                 <td>Grade 1</td>
                 <td>75</td>
-                <td><button class="btn btn-outline-success">Add</button></td>
+                <td><a href="./mealprogram.html"></a><button class="btn btn-outline-success">Add</button></td>
                 <td>
                   <a href="./beneficiarydetails.html"
                     ><button class="btn btn-outline-warning">View</button></a
