--- a/Brandlogs/BrandlogsForms/adminLogin.html
+++ b/Brandlogs/BrandlogsForms/adminLogin.html
@@ -37,9 +37,11 @@
             />
           </div>
           <div class="d-flex align-items-center justify-content-center">
-            <button type="submit" class="w-100 mt-3 px-4 py-2 rounded">
-              Login
-            </button>
+            <a href="./SchoolProfileFlow.html">
+              <button type="submit" class="w-100 mt-3 px-4 py-2 rounded">
+                Login
+              </button>
+            </a>
           </div>
         </form>
       </div>
