--- a/Brandlogs/Admin/mealprogram.html
+++ b/Brandlogs/Admin/mealprogram.html
@@ -97,10 +97,7 @@
               </a>
             </li>
             <li class="mobile-icon">
-              <a
-                href="../Admin/landingPage.html"
-                style="text-decoration: none"
-              >
+              <a href="../Admin/landingPage.html" style="text-decoration: none">
                 <div class="d-flex">
                   <i class="fas fa-home" style="margin: 10px; color: #000"></i>
                   <h4
@@ -127,7 +124,7 @@
           <table class="table table-bordered">
             <thead>
               <tr>
-                <th>[Logo]</th>
+                <th>Logo</th>
                 <th>School Name</th>
                 <th>Total School Kids</th>
                 <th>Action</th>
@@ -140,8 +137,14 @@
                 data-target="#details1"
                 aria-expanded="false"
               >
-                <td><img src="#" alt="Logo" width="50" /></td>
-                <td>Dummy School 1</td>
+                <td>
+                  <img
+                    src="../Assets/images/school logo.png"
+                    width="50px"
+                    alt=""
+                  />
+                </td>
+                <td>School 1</td>
                 <td>100</td>
                 <td>
                   <button class="btn btn-outline-warning">View More</button>
@@ -152,8 +155,14 @@
                 data-target="#details2"
                 aria-expanded="false"
               >
-                <td><img src="#" alt="Logo" width="50" /></td>
-                <td>Dummy School 2</td>
+                <td>
+                  <img
+                    src="../Assets/images/school logo.png"
+                    width="50px"
+                    alt=""
+                  />
+                </td>
+                <td>School 2</td>
                 <td>45</td>
                 <td>
                   <button class="btn btn-outline-warning">View More</button>
@@ -164,8 +173,14 @@
                 data-target="#details3"
                 aria-expanded="false"
               >
-                <td><img src="#" alt="Logo" width="50" /></td>
-                <td>Dummy School 3</td>
+                <td>
+                  <img
+                    src="../Assets/images/school logo.png"
+                    width="50px"
+                    alt=""
+                  />
+                </td>
+                <td>School 3</td>
                 <td>75</td>
                 <td>
                   <button class="btn btn-outline-warning">View More</button>
