--- a/Brandlogs/Admin/usermetrics.html
+++ b/Brandlogs/Admin/usermetrics.html
@@ -96,10 +96,7 @@
               </a>
             </li>
             <li class="mobile-icon">
-              <a
-               href="../Admin/landingPage.html"
-               style="text-decoration: none"
-              >
+              <a href="../Admin/landingPage.html" style="text-decoration: none">
                 <div class="d-flex">
                   <i class="fas fa-home" style="margin: 10px; color: #000"></i>
                   <h4
@@ -118,26 +115,28 @@
       <!-- Page Content Holder -->
       <div id="content">
         <div
-          class="w-100 p-5 d-flex flex-column flex-md-row justify-content-between mt-0"
+          class="col-12 col-md-9 p-5 d-flex flex-column justify-content-between mt-0"
         >
           <!-- Pie Chart -->
           <div
             style="
-              max-height: 300px;
+              max-height: 500px;
               border-radius: 2%;
               box-shadow: 3px 3px 2px #ccc;
             "
-            class="row col-md-4 d-flex"
+            class="row d-flex justify-content-center"
           >
-            <div class="col-12 border col-md-12">
+            <div class="col-md-6">
               <canvas id="genderPieChart"></canvas>
             </div>
           </div>
 
           <!-- User Birthday Cards -->
-          <div class="col-12 col-md-6">
-            <div class="mt-4 mt-md-0">
-              <h3 class="fs-6"><strong>User Birthday Metrics</strong></h3>
+          <div class="col-12">
+            <div class="mt-5">
+              <h3 class="fs-6">
+                <strong>User Birthday Metrics</strong>
+              </h3>
               <div class="card-columns d-flex flex-column gap-2">
                 <!-- Static cards for each month -->
                 <div style="background-color: #3984b26b" class="card">
